Added action title

--- a/Klinik.Web/Views/Doctor/Index.cshtml
+++ b/Klinik.Web/Views/Doctor/Index.cshtml
@@ -35,7 +35,7 @@
                         <th>@Klinik.Resources.UIMessages.Email</th>
                         <th>@Klinik.Resources.UIMessages.HPNumber</th>
                         <th>@Klinik.Resources.UIMessages.Remark</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
