--- a/Klinik.Web/Views/MasterData/ClinicList.cshtml
+++ b/Klinik.Web/Views/MasterData/ClinicList.cshtml
@@ -31,7 +31,7 @@
                         <th>@Klinik.Resources.UIMessages.City</th>
                         <th>@Klinik.Resources.UIMessages.ClinicType</th>
                         <th>@Klinik.Resources.UIMessages.Email</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
