--- a/Klinik.Web/Views/MasterData/EmployeeList.cshtml
+++ b/Klinik.Web/Views/MasterData/EmployeeList.cshtml
@@ -31,7 +31,7 @@
                         <th>@Klinik.Resources.UIMessages.EmploymentType</th>
                         <th>@Klinik.Resources.UIMessages.EmpStatus</th>
                         <th>@Klinik.Resources.UIMessages.Email</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
