--- a/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
+++ b/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
@@ -27,7 +27,7 @@
                         <th>@Klinik.Resources.UIMessages.Name</th>
                         <th>@Klinik.Resources.UIMessages.Description</th>
                         <th>@Klinik.Resources.UIMessages.Navigation</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
