--- a/Klinik.Web/Views/MasterData/UserList.cshtml
+++ b/Klinik.Web/Views/MasterData/UserList.cshtml
@@ -29,7 +29,7 @@
                         <th>@Klinik.Resources.UIMessages.Employee</th>
                         <th>@Klinik.Resources.UIMessages.ExpiredDate</th>
                         <th>@Klinik.Resources.UIMessages.Status</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
