--- a/Klinik.Web/Views/MasterData/ParamedicList.cshtml
+++ b/Klinik.Web/Views/MasterData/ParamedicList.cshtml
@@ -34,7 +34,7 @@
                         <th>@Klinik.Resources.UIMessages.Email</th>
                         <th>@Klinik.Resources.UIMessages.HPNumber</th>
                         <th>@Klinik.Resources.UIMessages.Remark</th>
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
