--- a/Klinik.Web/Views/Paramedic/Create.cshtml
+++ b/Klinik.Web/Views/Paramedic/Create.cshtml
@@ -8,7 +8,7 @@
     <div class="col-xs-12">
         <section class="panel form-wizard" id="w4">
             <header class="panel-heading">
-                <h2 class="panel-title">@Klinik.Resources.UIMessages.DoctorRegistrationWizard</h2>
+                <h2 class="panel-title">@Klinik.Resources.UIMessages.ParamedicRegistrationWizard</h2>
             </header>
             <div class="panel-body">
                 <div class="wizard-progress wizard-progress-lg">
@@ -23,14 +23,14 @@
                             <a href="#w4-profile" data-toggle="tab"><span>2</span>@Klinik.Resources.UIMessages.EmployeeInfo</a>
                         </li>
                         <li>
-                            <a href="#w4-billing" data-toggle="tab"><span>3</span>@Klinik.Resources.UIMessages.DoctorInfo</a>
+                            <a href="#w4-billing" data-toggle="tab"><span>3</span>@Klinik.Resources.UIMessages.ParamedicInfo</a>
                         </li>
                         <li>
                             <a href="#w4-confirm" data-toggle="tab"><span>4</span>@Klinik.Resources.UIMessages.Confirmation</a>
                         </li>
                     </ul>
                 </div>
-                <form class="form-horizontal" novalidate="novalidate" method="post" action="/Doctor/Create" id="frmRegisterDoctor">
+                <form class="form-horizontal" novalidate="novalidate" method="post" action="/Paramedic/Create" id="frmRegisterDoctor">
                     <div class="tab-content">
                         <div id="w4-account" class="tab-pane active">
                             <div class="form-group">
@@ -160,7 +160,7 @@
                         <a><i class="fa fa-angle-left"></i> ... Previous ...</a>
                     </li>
                     <li>
-                        <a href="/Doctor/Index"><i class="fa fa-close"></i> ... Close ...</a>
+                        <a href="/Paramedic/Index"><i class="fa fa-close"></i> ... Close ...</a>
                     </li>
                     <li class="finish hidden pull-right">
                         <a>... Finish ...</a>
@@ -186,7 +186,7 @@
     <script type="text/javascript">
     $(document).ready(function () {
         $('#btnreset').click(function (e) {
-             window.location.href = "/Doctor/Index";
+             window.location.href = "/Paramedic/Index";
         });
 
         $('#tbValidFrom').datepicker({
