--- a/Klinik.Web/Views/Patient/PasienList.cshtml
+++ b/Klinik.Web/Views/Patient/PasienList.cshtml
@@ -1,8 +1,7 @@
-﻿@model Klinik.Entities.MasterData.EmployeeModel
+﻿@model Klinik.Entities.MasterData.PatientModel
 
 @{
-    ViewBag.Title = "EmployeeList";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Pasien List";
 }
 
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
@@ -16,21 +15,22 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">@Klinik.Resources.UIMessages.EmployeeList</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.PatientList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="tbEmployee" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbPatient" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
                         <th>@Klinik.Resources.UIMessages.ID</th>
-                        <th>@Klinik.Resources.UIMessages.EmpID</th>
+                        <th>@Klinik.Resources.UIMessages.Employee</th>
+                        <th>@Klinik.Resources.UIMessages.FamilyRelationship</th>
                         <th>@Klinik.Resources.UIMessages.Name</th>
-                        <th>@Klinik.Resources.UIMessages.Birthdate</th>
                         <th>@Klinik.Resources.UIMessages.Gender</th>
-                        <th>@Klinik.Resources.UIMessages.EmploymentType</th>
-                        <th>@Klinik.Resources.UIMessages.EmpStatus</th>
-                        <th>@Klinik.Resources.UIMessages.Email</th>
+                        <th>@Klinik.Resources.UIMessages.Birthdate</th>
+                        <th>@Klinik.Resources.UIMessages.City</th>
+                        <th>@Klinik.Resources.UIMessages.Type</th>
+                       
                         <th></th>
                     </tr>
                 </thead>
@@ -43,17 +43,17 @@
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/MasterData/CreateOrEditEmployee";
+            window.location.href = "/Patient/CreateNewPatient";
         });
 
-        $('#tbEmployee').dataTable({
+        $('#tbPatient').dataTable({
             "processing": true,
             "serverSide": true,
             "filter": true,
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/MasterData/GetEmployee",
+                "url": "/Patient/GetListData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -72,23 +72,24 @@
                 },
                 {
                     "targets": [2],
-                    "searchable": true,
-                    "orderable": true
+                    "searchable": false,
+                    "orderable": false
                 },
                 {
                     "targets": [3],
-                    "searchable": false,
-                    "orderable": false
+                    "searchable": true,
+                    "orderable": true
                 },
                 {
                     "targets": [4],
                     "searchable": false,
                     "orderable": false
+
                 },
                 {
                     "targets": [5],
-                    "searchable": false,
-                    "orderable": false
+                    "searchable": true,
+                    "orderable": true
                 },
                 {
                     "targets": [6],
@@ -99,26 +100,24 @@
                     "targets": [7],
                     "searchable": false,
                     "orderable": false
-                },
-                {
-                    "targets": [8],
-                    "searchable": false,
-                    "orderable": false
                 }
+               
                 ],
 
             "columns": [
                 { "data": "Id", "name": "Id", "autoWidth": false },
-                { "data": "EmpID", "name": "EmpID", "autoWidth": true },
-                { "data": "EmpName", "name": "EmpName", "autoWidth": true },
-                { "data": "BirthdateStr", "name": "BirthdateStr", "autoWidth": true },
+                { "data": "EmployeeName", "name": "EmployeeName", "autoWidth": true },
+                { "data": "familyRelationshipDesc", "name": "familyRelationshipDesc", "autoWidth": true },
+                { "data": "Name", "name": "Name", "autoWidth": true },
                 { "data": "Gender", "name": "Gender", "autoWidth": true },
-                { "data": "EmpTypeDesc", "name": "EmpTypeDesc", "autoWidth": true },
-                { "data": "EmpStatusDesc", "name": "EmpStatusDesc", "autoWidth": true },
-                { "data": "Email", "name": "Email", "autoWidth": true },
+                { "data": "BirthDateStr", "name": "BirthDateStr", "autoWidth": true },
+                { "data": "CityNm", "name": "CityNm", "autoWidth": true },
+                { "data": "TypeDesc", "name": "TypeDesc", "autoWidth": true },
+                
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditEmployee?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Patient/CreateNewPatient?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
                 }
+
 
             ]
         });
@@ -138,17 +137,17 @@
     var Delete = function (ID) {
         var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
-            DeleteUser(ID);
+            DeletePatient(ID);
         }
         return false;
     }
 
-    function DeleteUser(Id) {
+    function DeletePatient(Id) {
         $.ajax({
-            url: '/MasterData/DeleteMasterEmployee?id=' + Id,
+            url: '/Patient/DeletePatient?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status) {
+                if (result.Status ) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
