--- a/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
+++ b/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
@@ -27,9 +27,12 @@
                     <div class="col-md-4">
                         @Html.DatalistFor(x => x.PatientID, new PatientDataList { Url = "/Registration/AllPatient" })
                     </div>
-                    <div class="col-md-2">
-                        <button type="reset" id="btnNewPatient" class="btn btn-success"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.NewPatient</button>
-                    </div>
+                    if (@Model.CurrentPoliID == 1)
+                    {
+                        <div class="col-md-2">
+                            <button type="reset" id="btnNewPatient" class="btn btn-success"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.NewPatient</button>
+                        </div>
+                    }
                 }
                 else
                 {
