--- a/Klinik.Web/Views/Patient/Create.cshtml
+++ b/Klinik.Web/Views/Patient/Create.cshtml
@@ -4,9 +4,6 @@
     ViewBag.Title = "CreateNewPatient";
 }
 
-<link href="~/Content/css/select2.css" rel="stylesheet" />
-<script src="~/Scripts/select2.js"></script>
-
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
@@ -15,13 +12,13 @@
         <h5 class="panel-title">Form @ViewBag.ActionType Patient</h5>
     </header>
     <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/Patient/CreateNewPatient" enctype="multipart/form-data">
+        <form class="form-horizontal form-bordered" method="post" action="/Patient/Create" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.Id)
+                    @Html.HiddenFor(x => x.IsFromRegistration)
                     @Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.EmpReff, new { @class = "form-control", @id = "ddlEmpReff" })
-
                 </div>
             </div>
             <div class="form-group">
@@ -50,17 +47,14 @@
                     @Html.RadioButtonFor(m => m.Gender, "F", new { @class = "form-check-input", @id = "rdbFeMale", @text = "Female" }) @Klinik.Resources.UIMessages.Female
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.MaritalStatus
                 </label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.MaritalStatus, (IEnumerable<SelectListItem>)ViewBag.Marital, new { @class = "form-control", @id = "ddlMarital" })
-
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.Birthdate
@@ -69,7 +63,6 @@
                     @Html.TextBoxFor(x => x.BirthDateStr, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBirthDate" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.KTPNumber
@@ -78,7 +71,6 @@
                     @Html.TextBoxFor(x => x.KTPNumber, new { @class = "form-control", @id = "tbKTP" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.Address
@@ -88,7 +80,6 @@
                     @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.City
@@ -97,28 +88,24 @@
                     @Html.DropDownListFor(p => p.CityID, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlCity" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Type</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.Type, (IEnumerable<SelectListItem>)ViewBag.PatientType, new { @class = "form-control", @id = "ddlPatientType" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BPJSNo</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.BPJSNumber, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBPJS" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BloodType</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.BloodType, new { @class = "form-control", @id = "tbBlood" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.CurrentAddress
@@ -127,7 +114,6 @@
                     @Html.TextAreaFor(x => x.PatientClinic.TempAddress, new { @class = "form-control", @id = "tbTempAddress" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.City
@@ -136,28 +122,24 @@
                     @Html.DropDownListFor(p => p.PatientClinic.TempCityId, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlTempCity" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPerson</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.PatientClinic.RefferencePerson, new { @class = "form-control", @id = "tbReffPerson" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPersonNo</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.PatientClinic.RefferenceNumber, new { @class = "form-control", @id = "tbReffNo" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffRelation</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.PatientClinic.RefferenceRelation, (IEnumerable<SelectListItem>)ViewBag.ReffRelation, new { @class = "form-control", @id = "ddlReffRelation" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.OldMRNumber</label>
                 <div class="col-md-4">
@@ -173,16 +155,13 @@
             <div class="form-group">
                 @Html.Label("Photo", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-
                     @Html.TextBoxFor(m => m.file, new { @type = "file", @Id = "PhotoUpload", @name = "PhotoUpload", @onchange = "previewImage(event)" })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.Label("Existing photo (if any)", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-
-                    @if (Model != null)
+                    @if (Model != null && Model.Photo != null)
                     {
                         <img src="@Url.Content("~/fileDoc/Photo/"+ @Model.Photo.ActualName)"
                              alt="" id="ImageBox"
@@ -193,10 +172,8 @@
                         <img alt="" id="ImageBox"
                              class="img-thumbnail" width="280" />
                     }
-
                 </div>
             </div>
-
             <br />
             <footer class="panel-footer">
                 <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
@@ -215,7 +192,6 @@
             </div>
             <div class="modal-body">
                 <label class="control-label" id="lblconfMsg"></label>
-
             </div>
             <div class="modal-footer">
                 <button type="button" id="btnExData" class="btn btn-default" data-dismiss="modal">@Klinik.Resources.UIMessages.UseExistingGoLoket</button>
@@ -226,8 +202,8 @@
 </div>
 
 
-
-<script type="text/javascript">
+@section Scripts {
+    <script type="text/javascript">
     $(document).ready(function () {
         $('#btnreset').click(function (e) {
              window.location.href = "/Patient/PasienList";
@@ -282,7 +258,6 @@
                 }
             }
         }
-       
 
         var _confirmation = "@ViewBag.Confirmation";
         var _arrConf = _confirmation.split(";");
@@ -292,8 +267,6 @@
                 backdrop:'static'
             });
         }
-
-
     });
 
     function previewImage(event) {
@@ -333,5 +306,5 @@
         });
     };
 
-</script>
-
+    </script>
+}
