--- a/Klinik.Web/Views/Patient/PasienList.cshtml
+++ b/Klinik.Web/Views/Patient/PasienList.cshtml
@@ -4,9 +4,6 @@
     ViewBag.Title = "Pasien List";
 }
 
-<link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
-<link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
-
 <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
@@ -30,8 +27,7 @@
                         <th>@Klinik.Resources.UIMessages.Birthdate</th>
                         <th>@Klinik.Resources.UIMessages.City</th>
                         <th>@Klinik.Resources.UIMessages.Type</th>
-                       
-                        <th></th>
+                        <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
             </table>
@@ -39,14 +35,16 @@
     </div>
 </section>
 
-<script type="text/javascript">
+@section Scripts {
+    <script type="text/javascript">
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/Patient/CreateNewPatient";
+            window.location.href = "/Patient/Create";
         });
 
         $('#tbPatient').dataTable({
+            "autoWidth": false,
             "processing": true,
             "serverSide": true,
             "filter": true,
@@ -57,13 +55,11 @@
                 "type": "POST",
                 "datatype": "json"
             },
-
             "columnDefs":
                 [{
                     "targets": [0],
                     "visible": false,
                     "searchable": false,
-
                 },
                 {
                     "targets": [1],
@@ -84,7 +80,6 @@
                     "targets": [4],
                     "searchable": false,
                     "orderable": false
-
                 },
                 {
                     "targets": [5],
@@ -101,9 +96,7 @@
                     "searchable": false,
                     "orderable": false
                 }
-               
                 ],
-
             "columns": [
                 { "data": "Id", "name": "Id", "autoWidth": false },
                 { "data": "EmployeeName", "name": "EmployeeName", "autoWidth": true },
@@ -113,12 +106,10 @@
                 { "data": "BirthDateStr", "name": "BirthDateStr", "autoWidth": true },
                 { "data": "CityNm", "name": "CityNm", "autoWidth": true },
                 { "data": "TypeDesc", "name": "TypeDesc", "autoWidth": true },
-                
+
                 {
                     "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Patient/CreateNewPatient?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
                 }
-
-
             ]
         });
     });
@@ -159,4 +150,5 @@
             }
         });
     }
-</script>
+    </script>
+}
