Fix edit patient

--- a/Klinik.Web/Views/Patient/CreateOrEditPatient.cshtml
+++ b/Klinik.Web/Views/Patient/CreateOrEditPatient.cshtml
@@ -12,7 +12,7 @@
         <h5 class="panel-title">Form @ViewBag.ActionType Patient</h5>
     </header>
     <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/Patient/Create" enctype="multipart/form-data">
+        <form class="form-horizontal form-bordered" method="post" action="/Patient/CreateOrEditPatient" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
                 <div class="col-md-4">
