--- a/Klinik.Web/Views/Doctor/Index.cshtml
+++ b/Klinik.Web/Views/Doctor/Index.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
-
-<br /><br />
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">@Klinik.Resources.UIMessages.DoctorList</h5>
+        <h5 class="panel-title">
+            @Klinik.Resources.UIMessages.DoctorList
+            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+        </h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
