--- a/Klinik.Web/Views/PoliSchedule/Master.cshtml
+++ b/Klinik.Web/Views/PoliSchedule/Master.cshtml
@@ -5,15 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
-<br /><br />
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <div>
-            <h5 class="panel-title">@Klinik.Resources.UIMessages.PoliScheduleMasterList</h5>
+            <h5 class="panel-title">
+                @Klinik.Resources.UIMessages.PoliScheduleMasterList
+                <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            </h5>
         </div>
     </header>
     <div class="panel-body">
