Changed to show the selected privileges first

--- a/Klinik.Web/Views/MappingMaster/RolePrivilegeList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/RolePrivilegeList.cshtml
@@ -116,7 +116,7 @@
                 }],
 
 
-            'order': [[1, 'asc']],
+            'order': [[1, 'desc']],
             'rowCallback': function (row, data, dataIndex) {
                 // Get row ID
                 var rowId = data.PrivilegeID;
