--- a/Klinik.Web/Views/MasterData/ClinicList.cshtml
+++ b/Klinik.Web/Views/MasterData/ClinicList.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Klinik.Entities.MasterData.ClinicModel
 
 @{
-    ViewBag.Title = "ClinicList";
+                /**/
+
+                ViewBag.Title = "ClinicList";
 }
 
 <section class="panel">
@@ -155,7 +157,7 @@
             url: '/MasterData/DeleteMasterClinic?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "True") {
+                if (result.Status) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
