--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -122,7 +122,7 @@
             url: '/MasterData/DeleteMasterOrganisasi?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "True") {
+                if (result.Status) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
