--- a/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
+++ b/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
@@ -118,7 +118,7 @@
             url: '/MasterData/DeleteMasterPrivilege?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "True") {
+                if (result.Status) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
