--- a/Klinik.Web/Views/MasterData/RoleList.cshtml
+++ b/Klinik.Web/Views/MasterData/RoleList.cshtml
@@ -112,7 +112,7 @@
             url: '/MasterData/DeleteMasterRole?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "True") {
+                if (result.Status) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
