--- a/Klinik.Web/Views/MasterData/UserList.cshtml
+++ b/Klinik.Web/Views/MasterData/UserList.cshtml
@@ -132,7 +132,7 @@
             url: '/MasterData/DeleteMasterUser?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "True") {
+                if (result.Status) {
                     toastr.options.closeButton = false;
                     toastr.options.timeOut = 2000;
                     location.reload();
